--- a/Projects/csr-secure-pipeline/inventory.ini
+++ b/Projects/csr-secure-pipeline/inventory.ini
@@ -4,7 +4,7 @@ csr1 ansible_host=18.188.169.93
 [cisco_csr:vars]
 ansible_user=ec2-user
 ansible_password=cisco
-ansible_connection=network_cli
-ansible_network_os=ios
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_connection=ansible.netcommon.network_cli
+ansible_network_os=cisco.ios.ios
+ansible_become=yes
 
